Adding styling for homepage and navbar

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,6 +1,11 @@
 /* TODO Add site wide styles */
+#root {
+    width: 100%;
+}
+
 body {
     background-color: #fafafa;
+    margin: 0;
 }
 
 .post_header_image{
@@ -8,9 +13,51 @@ body {
     clip-path: circle();
 }
 
+.post_header {
+    border-bottom: 1px solid lightgray;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    /* padding: 7px; */
+    /* justify-content: center; */
+}
+
+.post_header_link {
+    display: flex;
+    align-items: center;
+    margin: 1rem;
+    /* justify-content: space-evenly; */
+}
+
+.post_header_username {
+    font-weight: bold;
+    font-family: Nunito Sans;
+    margin-left: 2rem;
+}
+
+.post_header_follow {
+    display: flex;
+    align-items: center;
+    margin-right: 2rem;
+}
+
 .homepage_post_image {
     justify-content: center;
+    height: 400px;
     width: 400px;
+    /* max-width: 100%;
+    max-height: 100%; */
+}
+
+.homepage_post_date {
+    color: lightgray;
+    font-family: Nunito Sans;
+}
+
+.homepage_post_likes {
+    font-weight: bold;
+    font-family: Nunito Sans;
 }
 
 .postpage_post_image {
@@ -20,7 +67,7 @@ body {
 }
 
 .usercard_container {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     position: fixed;
     display: flex;
     align-items: center;
@@ -28,15 +75,17 @@ body {
 }
 
 .usercard_titles {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Nunito Sans;
 }
 
 .usercard_fullname {
     color: gray;
+    font-size: 16px;
 }
 
 .usercard_username {
     color: black;
+    font-size: 20px;
     font-weight: bold;
     text-decoration: none;
 }
@@ -44,12 +93,14 @@ body {
 .login_page_container{
     display: flex;
     justify-content: space-evenly;
+    margin-top: 10rem;
 }
 
 .signin_form_container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 10rem;
 }
 
 .login_form_container{
@@ -78,7 +129,8 @@ body {
 }
 
 .usercard_image {
-    max-width: 100px;
+    max-width: 120px;
+    /* width: 100px; */
     clip-path: circle();
 }
 
@@ -170,19 +222,20 @@ body {
 
 .homepage_container {
     display: flex;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     justify-content: center;
 
 }
 
 .homepage_center_container {
     display: flex;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 60rem;
 }
 
 .homepage_post_container {
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
+    border-radius: 4px;
     display: flex;
     flex-direction: column;
     margin-right: 1rem;
@@ -192,10 +245,98 @@ body {
 .homepage_post {
     display: flex;
     flex-direction: column;
+    max-width: 100%;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .homepage_user_container {
     width: 30rem;
 
+}
+
+.homepage_post_user_title {
+    font-weight: bold;
+}
+
+.homepage_post_user_caption {
+
+}
+
+.homepage_post_user_info {
+    font-family: Nunito Sans;
+}
+
+.comments_container {
+    max-height: 40rem;
+    max-width: 90%;
+    font-family: Nunito Sans;
+}
+
+.display_comments {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-decoration: none;
+}
+
+.display_comments_router{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.homepage_post_content_container {
+    /* border-top: 1px solid lightgray; */
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 95%;
+}
+
+.homepage_post_content_container_width {
+    border-top: 1px solid lightgray;
+    width: 100%;
+}
+
+.comments_post_container {
+    max-height: 10rem;
+    overflow-y: auto;
+}
+
+.comment_form_container {
+    margin-top: 4px;
+
+}
+
+.comment_form {
+    display: flex;
+
+}
+
+.comment_form_input {
+    width: 80%;
+    /* margin-right: 2rem; */
+}
+
+.comment_form_button_container {
+    margin-left: 10px;
+    height: 3rem;
+}
+
+.nav_container {
+    width: 100%;
+}
+
+.navbar_container {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.navbar_button_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 20rem;
 }
