--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -335,7 +335,8 @@ body {
 
 .comments_container {
     max-height: 40rem;
-    max-width: 90%;
+    /* max-width: 100%; */
+    width: 100%;
     font-family: Nunito Sans;
     /* overflow-x: visible; */
 }
@@ -390,12 +391,14 @@ body {
 
 .comment_form_container {
     margin-top: 4px;
+    border-top: 1px solid lightgray;
 }
 
 .comment_form {
     display: flex;
     padding-top: 5px;
-    border-top: 1px solid lightgray
+    margin-left: 2rem;
+    /* border-top: 1px solid lightgray */
 
 }
 
