Added styling and final changes

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -17,8 +17,8 @@ body {
     border-bottom: 1px solid lightgray;
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    /* align-items: center; */
     flex-direction: row;
     /* padding: 7px; */
     /* justify-content: center; */
