fixed pin functionality

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -160,6 +160,8 @@ body {
 .usercard_image {
     max-width: 120px;
     /* width: 100px; */
+    margin-right: 2rem;
+    margin-left: 2rem;
     clip-path: circle();
 }
 
@@ -283,7 +285,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-bottom: 30px;
+    margin-bottom: 1rem;
+    margin-left: 5rem;
 }
 
 
