--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -157,6 +157,90 @@ body {
     margin-top: 40px;
 }
 
+.createpost_container {
+    display: flex;
+    /* width: 40rem; */
+    justify-content: center;
+}
+
+.update_profile_picture_container {
+    display: flex;
+    justify-content: center;
+}
+
+.submit_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 2rem;
+    /* width: 20rem; */
+    height: 30rem;
+}
+
+.createpost_header {
+    display: flex;
+    justify-content: center;
+    font-family: Nunito Sans;
+    font-size: larger;
+    font-weight: bold;
+    /* margin-bottom: 1rem; */
+}
+
+.update_profile_picture_header {
+    display: flex;
+    justify-content: center;
+    font-family: Nunito Sans;
+    margin-bottom: 3rem;
+    font-size: larger;
+    font-weight: bold;
+}
+
+.update_profile_picture_title {
+    display: flex;
+    justify-content: center;
+    font-family: Nunito Sans;
+    font-size: medium;
+    color: gray;
+}
+
+.update_profile_picture_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 1rem;
+    /* width: 20rem; */
+    height: 20rem;
+}
+
+.createpost_container_center {
+    display: flex;
+    /* border: 1px solid black; */
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    width: 30rem;
+    height: 40rem;
+    margin-top: 3rem;
+    background-color: white;
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+    /* justify-content: center; */
+}
+
+.update_profile_picture_center {
+    display: flex;
+    /* border: 1px solid black; */
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    background-color: white;
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+    width: 30rem;
+    height: 40rem;
+    margin-top: 3rem;
+}
+
 .usercard_image {
     max-width: 120px;
     /* width: 100px; */
@@ -225,12 +309,13 @@ body {
     visibility: hidden;
 }
 
-.userpage_image_container:hover .my_userpage_image_text{
+.userpage_image_container:hover
+.my_userpage_image_text {
     visibility: visible;
 }
 
 .my_userpage_image:hover {
-    background-color: black;
+    /* background-color: black; */
     opacity: 40%;
 }
 
@@ -459,6 +544,7 @@ body {
     align-items: center;
     justify-content: center;
     /* border: 1px solid black; */
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
     margin-top: 10rem;
     height: 40rem;
     width: 30rem;
@@ -479,11 +565,13 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    width: 90%;
 }
 
 .edit_form_input {
     margin-top: 2rem;
     margin-bottom: 2rem;
+    width: 100%;
 }
 
 .edit_button {
