--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -6,6 +6,7 @@
 body {
     background-color: #fafafa;
     margin: 0;
+
 }
 
 .post_header_image{
@@ -348,8 +349,12 @@ body {
 .userpage_container {
     display: flex;
     flex-direction: column;
-    /* border: 1px solid black; */
     align-items: center;
+    /* margin-top: 40rem; */
+}
+
+.top_userpage_container {
+    /* margin-top: 40rem; */
 }
 
 .userpage_post_component_container {
@@ -504,7 +509,8 @@ body {
 }
 
 .nav_container {
-    width: 100%;
+    height: 5rem;
+
 }
 
 .navbar_homepage_text {
@@ -516,10 +522,11 @@ body {
     display: flex;
     width: 100%;
     height: 4rem;
-    /* position: fixed; */
+    position: fixed;
     justify-content: space-evenly;
     background-color: white;
     border-bottom: 1px solid lightgray;
+    z-index: 2;
 
 }
 
