--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -182,7 +182,7 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 2rem;
+    padding: 0rem 2rem 2rem 2rem;
     /* width: 20rem; */
     height: 30rem;
 }
@@ -193,7 +193,8 @@ a {
     font-family: Nunito Sans;
     font-size: larger;
     font-weight: bold;
-    /* margin-bottom: 1rem; */
+    margin-top: 1rem;
+    margin-bottom: 2rem;
 }
 
 .update_profile_picture_header {
@@ -437,6 +438,11 @@ a {
     font-family: Nunito Sans;
     margin-bottom: 1rem;
     cursor: default;
+}
+
+.createpost_type_button {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .comments_container {
